Fixed dark mode text for tags

--- a/styles/tags.css
+++ b/styles/tags.css
@@ -91,10 +91,15 @@
   padding: 8px 20px;
   margin-top: 15px;
   background: rgba(255, 255, 255, 0);
+  color: #000000;
   border-radius: 20px;
   text-decoration: none;
   font-weight: 500;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+}
+
+html.casper body.dark .tags-card-container .tags-content a {
+  color: #ffffff;
 }
 
 /* Add a container for the entire portfolio section */
